--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -3,63 +3,36 @@
   This is a step by step tutorial for new Rails learners to learn how
   Twitter Bootstrap works and to how to use Twitter Bootstrap to provide
   your application with modern layout and styling. We will build a working
-  Rails application to match the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template from
-  [[http://twitter.github.io/bootstrap/getting-started.html#examples][getting-started.html#examples]].
+  Rails application to match the [[http://getbootstrap.com/examples/starter-template/][starter-template]] template from
+  [[http://getbootstrap.com/getting-started/#examples][getting-started.html#examples]].
 
   The [[http://twitter.github.io/bootstrap/index.html][Twitter Bootstrap project]] website provides [[http://twitter.github.io/bootstrap/getting-started.html#examples][8 example layouts]]. In this tutorial we
   will use the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template to see how to use Bootstrap's CSS layout.
 
-  See [[http://twitter.github.io/bootstrap/][http://twitter.github.io/bootstrap/]] -> [[http://twitter.github.io/bootstrap/getting-started.html#examples][getting-started.html#examples]] to view all 8 examples.
-  See [[https://github.com/twitter/bootstrap][Bootstrap GitHub Repository]] to view the developement repository.
+  See the [[https://github.com/twitter/bootstrap][Bootstrap GitHub repository]] to view the developement repository.
 
   Note for Emacs users: This tutorial was written in Emacs Org Mode. If
   you are an Emacs Org Mode user you can carry out the steps in this tutorial
   from the twitter-bootstrap-step-by-step.org file.
-* [0/4] Setting up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] Gem
-  1. [ ] Enable bootstrap-sass in [[file:../Gemfile][Gemfile]]
-     #+BEGIN_SRC ruby
-       gem 'bootstrap-sass', '~> 2.3.2.0'
-     #+END_SRC
-  2. [ ] Remove the app/assets/stylesheets/application.css file
-  3. [ ] Create a new [[file:../app/assets/stylesheets/application.css.scss][app/assets/stylesheets/application.css.scss]] file
-     #+BEGIN_SRC css
-       @import "bootstrap";
-       body { padding-top: 60px; }
-       @import "bootstrap-responsive";
-     #+END_SRC
-  4. [ ] Import bootstrap javascript in [[file:../app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
-     #+BEGIN_SRC js
-       //= require jquery
-       //= require jquery_ujs
-       //= require turbolinks
-       //= require_tree .
-       //
-       // The following line Loads all Bootstrap javascripts
-       // = require bootstrap
-     #+END_SRC
-* [0/9] Build an initial Rails application
+* [8/8] Build an initial Rails application
 
   Let's build our example Rails application with a 'home' controller
   and 'home/index', "home/about", "home/contact" pages since those pages
   are in the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template.
   
-  1. [ ] Initialize a new Rails application
+  1. [X] Initialize a new Rails application
      #+BEGIN_SRC sh
        rails new bootstrap
      #+END_SRC
-  2. [ ] Change into the newly created Rails application directory
+  2. [X] Change into the newly created Rails application directory
      #+BEGIN_SRC sh
        cd bootstrap
      #+END_SRC
-  3. [ ] Clone [[https://github.com/troywill/twitter-bootstrap-for-beginners][this tutorial]] from Github.
-     #+BEGIN_SRC sh :tangle bin/clone-twitter-bootstrap-for-beginners.sh :shebang #!/bin/bash
-       git clone https://github.com/troywill/twitter-bootstrap-for-beginners.git
-     #+END_SRC
-  4. [ ] Examine your Rails installation
+  3. [X] Examine your Rails installation
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  5. [ ] Enable a JavaScript runtime in [[file:../Gemfile][Gemfile]]
+  4. [X] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
      
      You probably got a 'Could not find a JavaScript runtime.' message from the
      'rake about' command. Open [[file:../Gemfile][Gemfile]] with your text editor and enable 'therubyracer.'
@@ -73,46 +46,71 @@
      #+BEGIN_EXAMPLE
      textmate ../../Gemfile
      #+END_EXAMPLE
-  6. [ ] Examine your Rails installation again
+  5. [X] Examine your Rails installation again
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  7. [ ] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
+  6. [X] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
      #+BEGIN_SRC sh :tangle bin/generate-controller-home.sh :shebang #!/bin/sh
        rails generate controller home index about contact --skip-stylesheets
      #+END_SRC
      
      Note the use of '--skip-stylesheets' since we will use Twitter Bootstrap's stylesheets
-  8. [ ] Set the default route to home/index in [[file:../config/routes.rb][config/routes.rb]]
+  7. [X] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
      
-     Open [[file:../config/routes.rb][config/routes.rb]]  with your text editor. You will see the following
-     two commented lines near the top of the file:
+     Open [[file:config/routes.rb][config/routes.rb]]  with your text editor. You will see the following
+     commented line near the top of the file:
      #+BEGIN_SRC ruby
-       # You can have the root of your site routed with "root"
        # root 'welcome#index'
      #+END_SRC
-     # root 'welcome#index'
      
-     Let's uncomment and change the root:
+     Let's uncomment and change the application root view:
 
      #+BEGIN_SRC ruby
-       root 'home#index'
+       root "home#index"
      #+END_SRC
      
      Now, Rails will direct vistors to the application to home/index. We are
      ready to start the Rails application and incorporate Twitter Bootstrap's
      stylesheets and JavaScript scripts.
-  9. [ ] Start the rails server
+  8. [X] Start the rails server
      #+BEGIN_SRC sh
        rails server --port 3000
      #+END_SRC
 
   Now, let's incorporate Bootstrap into our application.
-* [0/2] Use Twitter Bootstrap fixed width layout in our Rails application
-
+* [4/4] Setting up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] Gem
+  1. [X] Enable bootstrap-sass in [[file:Gemfile][Gemfile]]
+     #+BEGIN_SRC ruby
+       # See http://rubygems.org/gems/bootstrap-sass
+       gem "bootstrap-sass", "~> 2.3.2.2"
+     #+END_SRC
+  2. [X] Create a new [[file:app/assets/stylesheets/application.css.scss][app/assets/stylesheets/application.css.scss]] file
+     #+BEGIN_SRC css
+       @import "bootstrap";
+       body { padding-top: 60px; }
+       @import "bootstrap-responsive";
+     #+END_SRC
+  3. [X] Remove the app/assets/stylesheets/application.css file
+  4. [X] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
+     #+BEGIN_SRC js
+       //= require jquery
+       //= require jquery_ujs
+       //= require turbolinks
+       //= require_tree .
+       //
+       // The following line Loads all Bootstrap javascripts
+       // = require bootstrap
+     #+END_SRC
+* [/] Use Twitter Bootstrap fixed width layout in our Rails application
+  
   Now that Bootstrap is installed let's proceed to use Bootstrap's CSS in our application.
 
   1. [ ] Overwrite app/views/layouts/application.html.erb with [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] 
+     
+     #+BEGIN_SRC html
+     
+     #+END_SRC
 
      #+BEGIN_SRC sh :tangle bin/copy-starter-template.sh :shebang #!/bin/sh
        # ./bin/copy-starter-template.sh
