--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -1,38 +1,34 @@
 * Introduction
   
   This is a step by step tutorial for new Rails learners to learn how
-  Twitter Bootstrap works and to how to use Twitter Bootstrap to provide
+  [[http://getbootstrap.com][Twitter Bootstrap]] works and to how to use Twitter Bootstrap to provide
   your application with modern layout and styling. We will build a working
-  Rails application to match the [[http://getbootstrap.com/examples/starter-template/][starter-template]] template from
-  [[http://getbootstrap.com/getting-started/#examples][getting-started.html#examples]].
+  Rails application to match the [[http://getbootstrap.com/examples/starter-template/][starter-template]] template from [[http://getbootstrap.com/getting-started/#examples][example layouts]]. 
 
-  The [[http://twitter.github.io/bootstrap/index.html][Twitter Bootstrap project]] website provides [[http://twitter.github.io/bootstrap/getting-started.html#examples][8 example layouts]]. In this tutorial we
-  will use the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template to see how to use Bootstrap's CSS layout.
-
-  See the [[https://github.com/twitter/bootstrap][Bootstrap GitHub repository]] to view the developement repository.
+  See the [[https://github.com/twbs/bootstrap][Bootstrap GitHub repository]] to view the developement repository.
 
   Note for Emacs users: This tutorial was written in Emacs Org Mode. If
   you are an Emacs Org Mode user you can carry out the steps in this tutorial
   from the twitter-bootstrap-step-by-step.org file.
-* [8/8] Build an initial Rails application
+* [/] Build an initial Rails application
 
   Let's build our example Rails application with a 'home' controller
   and 'home/index', "home/about", "home/contact" pages since those pages
   are in the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template.
   
-  1. [X] Initialize a new Rails application
+  1. [ ] Initialize a new Rails application
      #+BEGIN_SRC sh
        rails new bootstrap
      #+END_SRC
-  2. [X] Change into the newly created Rails application directory
+  2. [ ] Change into the newly created Rails application directory
      #+BEGIN_SRC sh
        cd bootstrap
      #+END_SRC
-  3. [X] Examine your Rails installation
+  3. [ ] Examine your Rails installation
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  4. [X] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
+  4. [ ] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
      
      You probably got a 'Could not find a JavaScript runtime.' message from the
      'rake about' command. Open [[file:../Gemfile][Gemfile]] with your text editor and enable 'therubyracer.'
@@ -46,17 +42,17 @@
      #+BEGIN_EXAMPLE
      textmate ../../Gemfile
      #+END_EXAMPLE
-  5. [X] Examine your Rails installation again
+  5. [ ] Examine your Rails installation again
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  6. [X] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
+  6. [ ] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
      #+BEGIN_SRC sh :tangle bin/generate-controller-home.sh :shebang #!/bin/sh
        rails generate controller home index about contact --skip-stylesheets
      #+END_SRC
      
      Note the use of '--skip-stylesheets' since we will use Twitter Bootstrap's stylesheets
-  7. [X] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
+  7. [ ] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
      
      Open [[file:config/routes.rb][config/routes.rb]]  with your text editor. You will see the following
      commented line near the top of the file:
@@ -73,26 +69,26 @@
      Now, Rails will direct vistors to the application to home/index. We are
      ready to start the Rails application and incorporate Twitter Bootstrap's
      stylesheets and JavaScript scripts.
-  8. [X] Start the rails server
+  8. [ ] Start the rails server
      #+BEGIN_SRC sh
        rails server --port 3000
      #+END_SRC
 
   Now, let's incorporate Bootstrap into our application.
-* [4/4] Setting up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] Gem
-  1. [X] Enable bootstrap-sass in [[file:Gemfile][Gemfile]]
+* [/] Setting up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] Gem
+  1. [ ] Enable bootstrap-sass in [[file:Gemfile][Gemfile]]
      #+BEGIN_SRC ruby
        # See http://rubygems.org/gems/bootstrap-sass
        gem "bootstrap-sass", "~> 2.3.2.2"
      #+END_SRC
-  2. [X] Create a new [[file:app/assets/stylesheets/application.css.scss][app/assets/stylesheets/application.css.scss]] file
+  2. [ ] Create a new [[file:app/assets/stylesheets/application.css.scss][app/assets/stylesheets/application.css.scss]] file
      #+BEGIN_SRC css
        @import "bootstrap";
        body { padding-top: 60px; }
        @import "bootstrap-responsive";
      #+END_SRC
-  3. [X] Remove the app/assets/stylesheets/application.css file
-  4. [X] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
+  3. [ ] Remove the app/assets/stylesheets/application.css file
+  4. [ ] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
      #+BEGIN_SRC js
        //= require jquery
        //= require jquery_ujs
