--- a/twitter-bootstrap-step-by-step.org
+++ b/twitter-bootstrap-step-by-step.org
@@ -3,7 +3,7 @@
   This is a step by step tutorial for new Rails learners to learn how
   [[http://getbootstrap.com][Twitter Bootstrap]] works and to how to use Twitter Bootstrap to provide
   your application with modern layout and styling. This tutorial was last
-  tested on November 19, 2013 by Troy Will. We will build a working
+  tested on December 4, 2013 by Troy Will. We will build a working
   Rails application to match the [[http://getbootstrap.com/examples/starter-template/][starter-template]] template from [[http://getbootstrap.com/getting-started/#examples][example layouts]]. 
 
   Note for Emacs users: This tutorial was written in Emacs Org Mode. If
@@ -16,19 +16,19 @@
   and 'home/index', "home/about", "home/contact" pages since those pages
   are in the [[http://twitter.github.io/bootstrap/examples/starter-template.html][starter-template.html]] template.
   
-  1. [ ] Initialize a new Rails application
+  1. [X] Initialize a new Rails application
      #+BEGIN_SRC sh
        rails new example
      #+END_SRC
-  2. [ ] Change into the newly created Rails application directory
+  2. [X] Change into the newly created Rails application directory
      #+BEGIN_SRC sh
        cd bootstrap
      #+END_SRC
-  3. [ ] Examine your Rails installation
+  3. [X] Examine your Rails installation
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  4. [ ] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
+  4. [X] Enable a JavaScript runtime in [[file:Gemfile][Gemfile]]
      
      You probably got a 'Could not find a JavaScript runtime.' message from the
      'rake about' command. Open [[file:../Gemfile][Gemfile]] with your text editor and enable 'therubyracer.'
@@ -42,18 +42,17 @@
      #+BEGIN_EXAMPLE
        textmate ../../Gemfile
      #+END_EXAMPLE
-  5. [ ] Examine your Rails installation again
+  5. [X] Examine your Rails installation again
      #+BEGIN_SRC sh
        rake about
      #+END_SRC
-  6. [ ] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
+  6. [X] Create a “home” controller and “home/index”, "home/about", "home/contact" pages
      #+BEGIN_SRC sh :tangle bin/generate-controller-home.sh :shebang #!/bin/sh
        rails generate controller home index about contact --skip-stylesheets
      #+END_SRC
      
      Note the use of '--skip-stylesheets' since we will use Twitter Bootstrap's stylesheets
-
-  7. [ ] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
+  7. [X] Set the default route to home/index in [[file:config/routes.rb][config/routes.rb]]
      
      Open [[file:config/routes.rb][config/routes.rb]]  with your text editor. You will see the following
      commented line near the top of the file:
@@ -70,26 +69,25 @@
      Now, Rails will direct vistors to the application to home/index. We are
      ready to start the Rails application and incorporate Twitter Bootstrap's
      stylesheets and JavaScript scripts.
-  8. [ ] Start the rails server
+  8. [X] Start the rails server
      #+BEGIN_SRC sh
        rails server --port 3000
      #+END_SRC
 
   Now, let's incorporate Bootstrap into our application.
 * Milestone 2: Set up Twitter Bootstrap with the [[https://github.com/thomas-mcdonald/bootstrap-sass/blob/master/README.md#bootstrap-for-sass][bootstrap-sass]] gem
-  1. [ ] Enable bootstrap-sass in [[file:Gemfile][Gemfile]]
+  1. [X] Enable [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]] in [[file:Gemfile][Gemfile]]
      #+BEGIN_SRC ruby
-       # See http://rubygems.org/gems/bootstrap-sass (November 2013)
+       # See http://rubygems.org/gems/bootstrap-sass (December 2013)
        gem "bootstrap-sass", "~> 3.0.2.1"
      #+END_SRC
-  2. [ ] Create a new [[file:app/assets/stylesheets/application.css.scss][app/assets/stylesheets/application.css.scss]] file
+  2. [X] Remove the app/assets/stylesheets/application.css file
+  3. [X] Create a new [[file:app/assets/stylesheets/application.css.scss][app/assets/stylesheets/application.css.scss]] file
      #+BEGIN_SRC css
        @import "bootstrap";
        body { padding-top: 60px; }
-       @import "bootstrap-responsive";
      #+END_SRC
-  3. [ ] Remove the app/assets/stylesheets/application.css file
-  4. [ ] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
+  4. [X] Import bootstrap javascript in [[file:app/assets/javascripts/application.js][app/assets/javascripts/application.js]]
      #+BEGIN_SRC js
        //= require jquery
        //= require jquery_ujs
@@ -118,7 +116,7 @@
      [[file:app/views/layouts/starter-template.html.erb][starter-template.html.erb]] is Twitter Bootstrap's [[https://github.com/twitter/bootstrap/blob/master/docs/examples/starter-template.html][starter template]] example merged
      with the default [[file:app/views/layouts/application.html.erb][app/views/layouts/application.html.erb]] file that Rails generates.
      
-     Here's the resulting app/views/layouts/application.html.erb:
+     Here's the resulting [[file:app/views/layouts/application.html.erb]]:
      #+BEGIN_SRC html
        <html>
        <head>
@@ -177,15 +175,15 @@
      went wrong.
 
 * Reference Section
-** Twitter Bootstrap GitHub
-   | Link                                 | Description                             |
-   |--------------------------------------+-----------------------------------------|
-   | [[https://github.com/twbs/bootstrap]]    | The Twitter Bootstrap GitHub repository |
 ** The most popular Rails Bootstrap Gems (November 2013)
   #+TBLNAME: bootstrap_gems
   | Gem                     | Version | Downloads | This version | Author          |
   |-------------------------+---------+-----------+--------------+-----------------|
-  | [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]]          | 3.0.2.1 | 2,400,000 | 8,200        | [[http://rubygems.org/profiles/tmcdonald][Thomas McDonald]] |
-  | [[http://rubygems.org/gems/twitter-bootstrap-rails][twitter-bootstrap-rails]] |   2.2.8 | 960,000   | 99,000       | [[http://rubygems.org/profiles/seyhunak][Seyhun Akyurek]]  |
-  | [[http://rubygems.org/gems/less-rails-bootstrap][less-rails-bootstrap]]    |   3.0.5 | 170,000   | 1,000        | [[http://rubygems.org/profiles/metaskills][Ken Collins]]     |
-  | [[http://rubygems.org/gems/sass-twitter-bootstrap][sass-twitter-bootstrap]]  |   2.3.0 | 3,900     | 720          | [[http://rubygems.org/profiles/wadetandy][Wade Tandy]]      |
+  | [[http://rubygems.org/gems/bootstrap-sass][bootstrap-sass]]          | 3.0.2.1 | 2,500,000 | 21,000       | [[http://rubygems.org/profiles/tmcdonald][Thomas McDonald]] |
+  | [[http://rubygems.org/gems/twitter-bootstrap-rails][twitter-bootstrap-rails]] |   2.2.8 | 980,000   | 120,000      | [[http://rubygems.org/profiles/seyhunak][Seyhun Akyurek]]  |
+  | [[http://rubygems.org/gems/less-rails-bootstrap][less-rails-bootstrap]]    |   3.0.5 | 170,000   | 2,300        | [[http://rubygems.org/profiles/metaskills][Ken Collins]]     |
+  | [[http://rubygems.org/gems/sass-twitter-bootstrap][sass-twitter-bootstrap]]  |   2.3.0 | 4,000     | 750          | [[http://rubygems.org/profiles/wadetandy][Wade Tandy]]      |
+** Twitter Bootstrap GitHub
+   | Link                                 | Description                             |
+   |--------------------------------------+-----------------------------------------|
+   | [[https://github.com/twbs/bootstrap]]    | The Twitter Bootstrap GitHub repository |
